	g_get_tmp_dir() instead of hardcoding /tmp. Use gstdio wrappers to
	cope with arbitrary Unicode pathnames on Windows. Don't bother
	with the folder mode checks on Windows, as the stat::st_mode field
	is mostly meaningless.

	* storage/exchange-change-password.c: Construct glade file
	pathname at run-time. Don't use compile-time gladedir on Windows.

	* storage/ximian-connector-setup.c: Define and initialise the
	datadir, gladedir and imagesdir variables on Windows here,
	too. Use GETTEXT_PACKAGE instead of PACKAGE.

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in: Add
	EXEEXT to the executable name.

2008-05-12  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.23.2 release and version bump.

2008-05-12  Tor Lillqvist  <tml@novell.com>

	Further outstanding Win32 portability changes.

	* camel/camel-stub.h: Add a separate have_status_thread boolean
	flag to the CamelStub struct. A pthread_t is not necessarily a
	scalar type, it can also be a struct.

	* camel/camel-stub.c: Corresponding changes.

	* camel/camel-stub.c: Include <winsock2.h> on Windows.
	(connect_to_storage): Different implementation on Unix and
	Windows. On Windows, there are no Unix domain sockets, so instead
	we just have the sockaddr_in of a TCP socket bound to the loopback
	interface stored in a plain file. Yes, this is insecure on
	multiple-user machines. Will have to spend more time on this issue
	sometime. Presumably Win32 named pipes are what should be used
	instead.
	(camel_stub_new): Corresponding ifdefs.

	* mail/mail-stub-listener.c: Corresponding changes.
	(finalize): Use g_unlink().
	(new_connection): Drop unused sa_un and len variables. Just pass
	NULL as parameters 2 and 3 to accept().
	(mail_stub_listener_construct): On Windows, instead of creating a
	Unix domain socket, create a TCP socket bound to the loopback
	interface and write its sockaddr_in to a regular file from which
	the client will read the address.
